# MedScribe

./: README.md  requirements.txt
Med/server/: Dockerfile
MedicalCopilot/: multionapi.py
MedicalCopilot/scripts/: pyproject.toml  voice_streaming.py
MedicalCopilot/server/: main.py  pyproject.toml  voice.py
