[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.145"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
speechrecognition = "^3.10.4"
multion = "^1.3.5"
agentops = "0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
